--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-tabs": "^6.0.2",
     "simple-parallax-js": "^6.0.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.14.4",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
